force-app/main/default/objects/Provider_Organisation__c/Provider_Organisation__c.object-meta.xml
<CustomObject>
    <description>The Provider Organisation is the business entity that the PHN has commissioned to provide the service.</description>
    <label>Provider Organisation</label>
    <nameField>
        <label>Provider Organisation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Provider Organisations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>