force-app/main/default/objects/Provider_Organisation__c/fields/Organisation_abn__c.field-meta.xml
<CustomField>
    <fullName>Organisation_abn__c</fullName>
    <description>The Australian Business Number of the provider organisation.</description>
    <label>ABN</label>
    <length>11</length>
    <required>true</required>
    <type>Text</type>
</CustomField>