force-app/main/default/objects/Provider_Organisation__c/fields/Organisation_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Organisation_End_Date__c</fullName>
    <description>The date on which a provider organisation stopped delivering services.</description>
    <label>Organisation End Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>