force-app/main/default/objects/Provider_Organisation__c/fields/Organisation_Key__c.field-meta.xml
<CustomField>
    <fullName>Organisation_Key__c</fullName>
    <description>A sequence of characters which uniquely identifies the provider organisation to the Primary Health Network. Assigned by the Primary Health Network.</description>
    <label>Organisation Key</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>