force-app/main/default/objects/Provider_Organisation__c/fields/Organisation_Legal_Name__c.field-meta.xml
<CustomField>
    <fullName>Organisation_Legal_Name__c</fullName>
    <description>The legal name of the provider organisation.</description>
    <label>Legal Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>