force-app/main/default/objects/Provider_Organisation__c/fields/Organisation_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Organisation_Start_Date__c</fullName>
    <description>The date on which a provider organisation started delivering services.</description>
    <label>Organisation Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>