force-app/main/default/objects/Provider_Organisation__c/fields/Organisation_state__c.field-meta.xml
<CustomField>
    <fullName>Organisation_state__c</fullName>
    <label>State</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New South Wales</fullName>
            </value>
            <value>
                <fullName>Victoria</fullName>
            </value>
            <value>
                <fullName>Queensland</fullName>
            </value>
            <value>
                <fullName>South Australia</fullName>
            </value>
            <value>
                <fullName>Western Australia</fullName>
            </value>
            <value>
                <fullName>Tasmania</fullName>
            </value>
            <value>
                <fullName>Northern Territory</fullName>
            </value>
            <value>
                <fullName>Australian Capital Territory</fullName>
            </value>
            <value>
                <fullName>Other Territories</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>