force-app/main/default/objects/Provider_Organisation__c/fields/Organisation_Tags__c.field-meta.xml
<CustomField>
    <fullName>Organisation_Tags__c</fullName>
    <description>List of tags for the provider organisation.</description>
    <label>Organisation Tags</label>
    <length>255</length>
    <type>Text</type>
</CustomField>