force-app/main/default/objects/Provider_Organisation__c/fields/Organisation_Type__c.field-meta.xml
<CustomField>
    <fullName>Organisation_Type__c</fullName>
    <label>Organisation Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>The Australian Business Number of the provider organisation.</fullName>
            </value>
            <value>
                <fullName>Private Psychiatry Practice</fullName>
            </value>
            <value>
                <fullName>General Medical Practice</fullName>
            </value>
            <value>
                <fullName>Private Hospital</fullName>
            </value>
            <value>
                <fullName>Headspace Centre</fullName>
            </value>
            <value>
                <fullName>Early Youth Psychosis Centre</fullName>
            </value>
            <value>
                <fullName>Community-managed Community Support Organisation</fullName>
            </value>
            <value>
                <fullName>Aboriginal Health/Medical Service</fullName>
            </value>
            <value>
                <fullName>State/Territory Health Service Organisation</fullName>
            </value>
            <value>
                <fullName>Drug and/or Alcohol Service</fullName>
            </value>
            <value>
                <fullName>Primary Health Network</fullName>
            </value>
            <value>
                <fullName>Medicare Local</fullName>
            </value>
            <value>
                <fullName>Division of General Practice</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Missing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>